проверка БД