@@ -2,34 +2,41 @@ package ru.yandex.practicum.filmorate.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dto.UserDto;
+import ru.yandex.practicum.filmorate.mappes.UserMapper;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.UserStorage;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserService {
 
     private final UserStorage userStorage;
+    private final UserMapper userMapper;
 
-    public User create(User user) {
+    public UserDto create(UserDto userDto) {
+        User user = userMapper.convertToUser(userDto);
         userStorage.create(user);
-        return user;
+        return userMapper.convertToUserDto(user);
     }
 
-    public List<User> getAll() {
-        return userStorage.getAll();
+    public List<UserDto> getAll() {
+        return userStorage.getAll().stream()
+                .map(userMapper::convertToUserDto)
+                .toList();
     }
 
-    public User getById(Long id) {
-        return userStorage.getById(id);
+    public UserDto getById(Long id) {
+        User user = userStorage.getById(id);
+        return userMapper.convertToUserDto(user);
     }
 
-    public User update(User user) {
+    public UserDto update(UserDto userDto) {
+        User user = userMapper.convertToUser(userDto);
         userStorage.update(user);
-        return user;
+        return userMapper.convertToUserDto(user);
     }
 
     public void deleteById(Long id) {
@@ -37,48 +44,23 @@ public class UserService {
     }
 
     public void addFriend(Long userId, Long friendId) {
-        User user = userStorage.getById(userId);
-        User friend = userStorage.getById(friendId);
-
-        if (userId.equals(friendId)) {
-            throw new IllegalArgumentException("Введен собственный id");
-        }
-
-        user.addFriend(friendId);
-        friend.addFriend(userId);
-
-        userStorage.update(user);
-        userStorage.update(friend);
+        userStorage.addFriend(userId, friendId);
     }
 
     public void removeFriend(Long userId, Long friendId) {
-        User user = userStorage.getById(userId);
-        User friend = userStorage.getById(friendId);
-
-        if (userId.equals(friendId)) {
-            throw new IllegalArgumentException("Введен собственный id");
-        }
-
-        user.removeFriend(friendId);
-        friend.removeFriend(userId);
-
-        userStorage.update(user);
-        userStorage.update(friend);
+        userStorage.removeFriend(userId, friendId);
     }
 
-    public List<User> getFriends(Long userId) {
-        User user = userStorage.getById(userId);
-        return user.getFriendIds().stream()
-                .map(id -> userStorage.getById(id))
-                .collect(Collectors.toList());
+    public List<UserDto> getFriends(Long userId) {
+        return userStorage.getFriends(userId).stream()
+                .map(userMapper::convertToUserDto)
+                .toList();
     }
 
-    public List<User> getCommonFriends(Long firstUserId, Long secondUserId) {
-        Set<Long> firstUserFriendIds = userStorage.getById(firstUserId).getFriendIds();
-        Set<Long> secondUserFriendIds = userStorage.getById(secondUserId).getFriendIds();
-        return firstUserFriendIds.stream()
-                .filter(id -> secondUserFriendIds.contains(id))
-                .map(id -> userStorage.getById(id))
-                .collect(Collectors.toList());
+
+    public List<UserDto> getCommonFriends(Long firstUserId, Long secondUserId) {
+        return userStorage.getCommonFriends(firstUserId, secondUserId).stream()
+                .map(userMapper::convertToUserDto)
+                .toList();
     }
 }
